samples/_failures_safe/1761392892_266330_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72aa5b8f.c: In function ‘main’:
./samples/SAFE/__tmp_72aa5b8f.c:166:5: error: expected declaration or statement at end of input
  166 |     if (len > 0 && input[len - 1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_72aa5b8f.c:166:5: error: expected declaration or statement at end of input
